--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,3 +10,5 @@ License URI: LICENSE
 Text Domain: pomme
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 */
+
+@import 'variables';
