--- a/style.css
+++ b/style.css
@@ -10,3 +10,6 @@ License URI: LICENSE
 Text Domain: pomme
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 */
+/**
+ * Note to self: The CSS reset is in `bootstrap.css`
+ */
