--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,9 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
  */
 
 @import "variables";
+
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
+
+@import "partials/wp-classes";
