Set up big red box as a mixin for easy reuse

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,9 +16,10 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
  */
 
 @import "variables";
-
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
+@import "mixins";
 
+@import "partials/masonry";
 @import "partials/wp-classes";
