--- a/style.css
+++ b/style.css
@@ -10,91 +10,36 @@ License URI: LICENSE
 Text Domain: pomme
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 */
-/**
- * Note to self: The CSS reset is in `bootstrap.css`
- */
-.masonry-brick,
-.masonry-stamp {
-  background-color: #a42a35;
-  border: 1px solid #a42a35;
-  -webkit-box-shadow: 4px 4px 2px rgba(21, 21, 21, 0.25);
-          box-shadow: 4px 4px 2px rgba(21, 21, 21, 0.25);
-  color: #f9f9f9;
-  padding: 1rem;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out; }
-  .masonry-brick:focus, .masonry-brick:hover,
-  .masonry-stamp:focus,
-  .masonry-stamp:hover {
-    background-color: #972731;
-    border-color: #972731; }
-  .masonry-brick a,
-  .masonry-stamp a {
-    color: #f9f9f9; }
+/** Note to self: The CSS reset is in `bootstrap.css` */
+.masonry-container { padding: 0; }
 
-.screen-reader-text {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  -webkit-clip-path: inset(50%);
-          clip-path: inset(50%);
-  border: 0; }
-  .screen-reader-text:active, .screen-reader-text:focus {
-    position: static;
-    width: auto;
-    height: auto;
-    overflow: visible;
-    clip: auto;
-    white-space: normal;
-    -webkit-clip-path: none;
-            clip-path: none; }
+.masonry-brick { position: relative; width: 100%; min-height: 1px; padding-right: 0.5rem; padding-left: 0.5rem; padding: 1rem; }
+@media (min-width: 768px) { .masonry-brick { flex: 0 0 50%; max-width: 50%; } }
+@media (min-width: 992px) { .masonry-brick { flex: 0 0 33.33333%; max-width: 33.33333%; } }
+@media (min-width: 1200px) { .masonry-brick { flex: 0 0 33.33333%; max-width: 33.33333%; } }
+
+.gutter-sizer { display: none; width: 0.5rem; }
+
+.screen-reader-text { position: absolute; width: 1px; height: 1px; padding: 0; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; clip-path: inset(50%); border: 0; }
+.screen-reader-text:active, .screen-reader-text:focus { position: static; width: auto; height: auto; overflow: visible; clip: auto; white-space: normal; clip-path: none; }
 
 /* Do not show the outline on the skip link target. */
-#content[tabindex="-1"]:focus {
-  outline: 0; }
+#content[tabindex="-1"]:focus { outline: 0; }
 
-.sticky {
-  /* required for theme review */ }
+.sticky { /* required for theme review */ }
 
-.bypostauthor {
-  /* required for theme review */ }
+.bypostauthor { /* required for theme review */ }
 
-.alignnone {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 100%;
-  height: auto; }
+.alignnone { margin-left: auto; margin-right: auto; max-width: 100%; height: auto; }
 
-.aligncenter {
-  display: block;
-  margin: 0.5rem 0;
-  max-width: 100%;
-  height: auto; }
+.aligncenter { display: block; margin: 0.5rem 0; max-width: 100%; height: auto; }
 
-.alignleft {
-  margin-bottom: 0.5rem;
-  height: auto; }
-  @media (min-width: 576px) {
-    .alignleft {
-      float: left;
-      margin-right: 0.5rem; } }
+.alignleft { margin-bottom: 0.5rem; height: auto; }
+@media (min-width: 576px) { .alignleft { float: left; margin-right: 0.5rem; } }
 
-.alignright {
-  margin-bottom: 0.5rem;
-  height: auto; }
-  @media (min-width: 576px) {
-    .alignright {
-      float: right;
-      margin-left: 0.5rem; } }
+.alignright { margin-bottom: 0.5rem; height: auto; }
+@media (min-width: 576px) { .alignright { float: right; margin-left: 0.5rem; } }
 
-.wp-caption {
-  margin: 0;
-  max-width: 100%;
-  height: auto; }
+.wp-caption { margin: 0; max-width: 100%; height: auto; }
 
-.wp-caption-text {
-  color: #868e96; }
+.wp-caption-text { color: #868e96; }
