Implement red box for posts on archive views

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,4 +22,6 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 @import "mixins";
 
 @import "partials/masonry";
+
+@import "partials/content";
 @import "partials/wp-classes";
