Header elements are positioned correctly

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,4 +24,5 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 @import "partials/masonry";
 
 @import "partials/content";
+@import "partials/header";
 @import "partials/wp-classes";
