Site branding and menu are styled appropriately

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,6 +1,7 @@
 .site-branding {
 	@include make-col-ready;
 
+	padding: $spacer;
 	text-align: center;
 	
 	@include media-breakpoint-up(md) {
@@ -22,16 +23,6 @@
 	font-family: $font-family-base;
 	font-size: $display3-size;
 	font-weight: bold;
-	letter-spacing: -1px;
-}
-
-.main-navigation {
-	@include make-col-ready;
-	
-	@include media-breakpoint-up(md) {
-		@include make-col(4);
-	
-		position: absolute;
-		left: 0;
-	}
+	letter-spacing: -2px;
+	margin: 0;
 }
