--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,4 +25,5 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 
 @import "partials/content";
 @import "partials/header";
+@import "partials/menu";
 @import "partials/wp-classes";
