--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -17,6 +17,14 @@
 		font-weight: bold;
 		letter-spacing: -1px;
 	}
+	
+	.single & {
+		position: relative;
+		
+		@include media-breakpoint-up(md) {
+			@include make-col-offset(4);
+		}
+	}
 }
 
 .site-title {
