--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ Text Domain: pomme
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 */
 /** Note to self: The CSS reset is in `bootstrap.css` */
-.masonry-container { padding: 0; }
+.masonry-container { padding: 0; position: relative; }
 
 .masonry-brick { position: relative; width: 100%; min-height: 1px; padding-right: 0.5rem; padding-left: 0.5rem; padding: 1rem; }
 @media (min-width: 768px) { .masonry-brick { flex: 0 0 50%; max-width: 50%; } }
@@ -31,14 +31,19 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 .archive-masonry a { text-decoration: none; }
 .archive-masonry a:hover { text-decoration: underline; }
 
+.single-masonry-brick { position: relative; width: 100%; min-height: 1px; padding-right: 0.5rem; padding-left: 0.5rem; padding: 1rem; }
+@media (min-width: 768px) { .single-masonry-brick { margin-left: 33.33333%; flex: 0 0 66.66667%; max-width: 66.66667%; } }
+
 .site-branding { position: relative; width: 100%; min-height: 1px; padding-right: 0.5rem; padding-left: 0.5rem; padding: 1rem; text-align: center; }
 @media (min-width: 768px) { .site-branding { flex: 0 0 66.66667%; max-width: 66.66667%; position: absolute; right: 0; text-align: right; } }
 .site-branding a { text-decoration: none; font-weight: bold; letter-spacing: -1px; }
+.single .site-branding { position: relative; }
+@media (min-width: 768px) { .single .site-branding { margin-left: 33.33333%; } }
 
 .site-title { font-family: "Catamaran", "Helvetica Neue", sans-serif; font-size: 4.5rem; font-weight: bold; letter-spacing: -2px; margin: 0; }
 
 .site-navigation { position: relative; width: 100%; min-height: 1px; padding-right: 0.5rem; padding-left: 0.5rem; padding: 1rem; }
-@media (min-width: 768px) { .site-navigation { flex: 0 0 33.33333%; max-width: 33.33333%; position: absolute; left: 0; } }
+@media (min-width: 768px) { .single .site-navigation { flex: 0 0 33.33333%; max-width: 33.33333%; position: absolute; top: 0; left: 0; } }
 .site-navigation ul { display: none; list-style: none; margin: 0.5rem 0; padding: 0; text-transform: uppercase; }
 .menu-active .site-navigation ul { display: block; }
 .site-navigation ul ul { margin: 0; text-transform: lowercase; }
