--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -16,3 +16,19 @@
 		color: theme-color( 'light' );
 	}
 }
+
+@mixin masonry-brick {
+	@include make-col-ready;
+	
+	@include media-breakpoint-up(md) {
+		@include make-col( 6 );
+	}
+	
+	@include media-breakpoint-up(lg) {
+		@include make-col( 4 );
+	}
+	
+	@include media-breakpoint-up(xl) {
+		@include make-col( 4 );
+	}
+}
