--- a/style.css
+++ b/style.css
@@ -37,13 +37,11 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 .archive-masonry a:hover { text-decoration: underline; }
 
 .single-masonry-brick { position: relative; width: 100%; min-height: 1px; padding-right: 0.5rem; padding-left: 0.5rem; padding: 1rem; }
-@media (min-width: 768px) { .single-masonry-brick { margin-left: 33.33333%; flex: 0 0 66.66667%; max-width: 66.66667%; } }
+@media (min-width: 768px) { .single-masonry-brick { flex: 0 0 66.66667%; max-width: 66.66667%; } }
 
 .site-branding { position: relative; width: 100%; min-height: 1px; padding-right: 0.5rem; padding-left: 0.5rem; padding: 1rem; text-align: center; }
 @media (min-width: 768px) { .site-branding { flex: 0 0 66.66667%; max-width: 66.66667%; text-align: left; } }
 .site-branding a { text-decoration: none; font-weight: bold; letter-spacing: -1px; }
-.single .site-branding { position: relative; }
-@media (min-width: 768px) { .single .site-branding { margin-left: 33.33333%; } }
 
 .site-title { font-family: "Catamaran", "Helvetica Neue", sans-serif; font-size: 4.5rem; font-weight: bold; letter-spacing: -2px; margin: 0; }
 
