--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 @media (min-width: 768px) { .site-branding { flex: 0 0 66.66667%; max-width: 66.66667%; text-align: left; } }
 .site-branding a { text-decoration: none; font-weight: bold; letter-spacing: -1px; }
 
-.site-title { font-family: "Catamaran", "Helvetica Neue", sans-serif; font-size: 4.5rem; font-weight: bold; letter-spacing: -2px; margin: 0; }
+.site-title { font-family: "Catamaran", "Helvetica Neue", sans-serif; font-size: 4.5rem; font-weight: bold; letter-spacing: -2px; line-height: 1.5; margin: 0; }
 
 .site-navigation { position: relative; width: 100%; min-height: 1px; padding-right: 0.5rem; padding-left: 0.5rem; padding: 1rem; text-align: center; }
 @media (min-width: 768px) { .site-navigation { flex: 0 0 33.33333%; max-width: 33.33333%; text-align: right; } }
