Implement archive and search views

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,7 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 
 @import "partials/masonry";
 
+@import "partials/archive";
 @import "partials/content";
 @import "partials/header";
 @import "partials/menu";
